--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-coverage = "^0.0"
 sphinx = "^3.1.1"
 toml = "^0.10.1"
 responses = "^0.10.15"
+sphinx-rtd-theme = "^0.5.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
