--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -2,7 +2,7 @@ name: docs/gh-pages
 on:
   create:
     tags:
-      - v*
+      - *
   schedule:
     - cron: '0 3 * * *' # run every night at 3AM
 
@@ -15,7 +15,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Setup python 
-              uses: actions/setup-python@master
+              uses: actions/setup-python@v2
               with:
                 python-version: 3.8
             
