--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py-quantaq"
-version = "1.0.2-alpha.0"
+version = "1.1.0"
 description = "API wrapper and utils for QuantAQ, Inc."
 authors = ["David H Hagan <david.hagan@quant-aq.com>"]
 license = "Apache License 2.0"
@@ -15,9 +15,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = ">=3.6.1"
 requests = "^2.24.0"
-pandas = "^1.0.5"
+pandas = ">=1.0.5"
 setuptools = "^47.3.1"
 
 [tool.poetry.dev-dependencies]
