--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -15,12 +15,15 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Setup python 
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@master
               with:
                 python-version: 3.8
             
             - name: Install poetry
-              uses: dschep/install-poetry-action@v1.3
+              uses: snok/install-poetry@v1.1.2
+              with:
+                version: 1.1.5
+                virtualenvs-create: true
             
             - name: Install dependencies
               run: poetry install
