--- a/.github/workflows/release-to-pypi.yml
+++ b/.github/workflows/release-to-pypi.yml
@@ -2,7 +2,7 @@ name: build & release
 on:
   create:
     tags:
-      - v*
+      - *
 
 jobs:
     build-n-publish:
@@ -18,7 +18,10 @@ jobs:
                 python-version: 3.8
             
             - name: Install poetry
-              uses: dschep/install-poetry-action@v1.3
+              uses: snok/install-poetry@v1.1.2
+              with:
+                version: 1.1.5
+                virtualenvs-create: true
             
             - name: Install dependencies
               run: poetry install
