--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -20,13 +20,15 @@ jobs:
                 python-version: 3.8
             
             - name: Install poetry
-              uses: snok/install-poetry@v1.1.2
+              uses: snok/install-poetry@v1.1.4
               with:
-                version: 1.1.5
+                version: 1.1.4
                 virtualenvs-create: true
             
             - name: Install dependencies
-              run: poetry install
+              run: |
+                source $HOME/.poetry/env
+                poetry install
             
             - name: build docs
               run: |
