--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -1,10 +1,10 @@
 name: docs/gh-pages
-on:
-  create:
-    tags:
-      - '*'
-  schedule:
-    - cron: '0 3 * * *' # run every night at 3AM
+on: [workflow_dispatch]
+  # create:
+  #   tags:
+  #     - '*'
+  # schedule:
+  #   - cron: '0 3 * * *' # run every night at 3AM
 
 jobs:
     build-docs:
