Fix gh-actions for docs

--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -32,6 +32,7 @@ jobs:
             
             - name: build docs
               run: |
+                source $HOME/.poetry/env
                 cd docs
                 make clean
                 make html
