--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -24,6 +24,7 @@ jobs:
               with:
                 version: 1.1.4
                 virtualenvs-create: true
+                virtualenvs-in-project: true
             
             - name: Install dependencies
               run: |
@@ -32,7 +33,7 @@ jobs:
             
             - name: build docs
               run: |
-                source $HOME/.poetry/env
+                source .venv/bin/activate 
                 cd docs
                 make clean
                 make html
