One more gh-action fix

--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -40,8 +40,9 @@ jobs:
                 cd ..
             
             - name: deploy to gh-pages
-              uses: Cecilapp/GitHub-Pages-deploy@master
+              uses: Cecilapp/GitHub-Pages-deploy@v3
               env:
-                EMAIL: dhagan@mit.edu
-                GH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-                BUILD_DIR: docs/_build/html
+                GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+              with:
+                email: david.hagan@quant-aq.com
+                build_dir: docs/_build/html
