--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -42,7 +42,7 @@ jobs:
             - name: deploy to gh-pages
               uses: Cecilapp/GitHub-Pages-deploy@v3
               env:
-                GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                email: david@davidhhagan.com
+                email: david.hagan@quant-aq.com
                 build_dir: docs/_build/html
