update install-poetry version, ditto for build-and-deploy-docs workflow

--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -9,7 +9,7 @@ on: [workflow_dispatch]
 jobs:
     build-docs:
         name: Build docs and push to gh-pages
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout branch
               uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
                 python-version: 3.8
             
             - name: Install poetry
-              uses: snok/install-poetry@v1.1.4
+              uses: snok/install-poetry@v1.3.4
               with:
                 version: 1.1.4
                 virtualenvs-create: true
