try to fix the CI tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "API wrapper and utils for QuantAQ, Inc."
 authors = ["David H Hagan <david.hagan@quant-aq.com>"]
 license = "Apache License 2.0"
 readme = "README.md"
-homepage = ""
+homepage = "https://quant-aq.github.io/py-quantaq"
 repository = "https://github.com/quant-aq/py-quantaq"
 documentation = "https://quant-aq.github.io/py-quantaq"
 keywords = []
