--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py-quantaq"
-version = "1.2.0a1"
+version = "1.3.0"
 description = "API wrapper and utils for QuantAQ, Inc."
 authors = ["David H Hagan <david.hagan@quant-aq.com>"]
 license = "Apache License 2.0"
@@ -25,7 +25,7 @@ numpy = ">=1.22"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
 pytest-coverage = "^0.0"
-sphinx = "^3.1.1"
+sphinx = "^4.2.0"
 toml = "^0.10.1"
 responses = "^0.10.15"
 sphinx-rtd-theme = "^0.5.0"
