--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -29,7 +29,7 @@ jobs:
             
             - name: build docs
               run: |
-                poetry shell
+                source $(poetry env info --path)/bin/activate
                 cd docs
                 make clean
                 make html
