--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py-quantaq"
-version = "1.3.0"
+version = "1.4.0a0"
 description = "API wrapper and utils for QuantAQ, Inc."
 authors = ["David H Hagan <david.hagan@quant-aq.com>"]
 license = "Apache License 2.0"
@@ -15,10 +15,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8, <3.11"
+python = ">=3.8, <3.12"
 requests = "^2.24"
 pandas = ">=1.0"
-setuptools = ">=47.0, <70.0"
+setuptools = ">=47.0"
 urllib3 = ">=1.26.5"
 numpy = ">=1.22"
 
