--- a/.github/workflows/release-to-pypi.yml
+++ b/.github/workflows/release-to-pypi.yml
@@ -20,6 +20,7 @@ jobs:
             - name: Install poetry
               uses: snok/install-poetry@v1
               with:
+                version: 1.8.5
                 virtualenvs-create: true
             
             - name: Install dependencies
