--- a/.github/workflows/release-to-pypi.yml
+++ b/.github/workflows/release-to-pypi.yml
@@ -29,6 +29,5 @@ jobs:
             - name: Build and publish to PyPI
               run: |
                 poetry build
-                poetry config pypi-token.pypi {{secrets.PYPI_TOKEN_PYQUANTAQ}}
-                poetry publish
+                poetry publish --username __token__ --password={{secrets.PYPI_TOKEN_PYQUANTAQ}}
                 
