--- a/.github/workflows/release-to-pypi.yml
+++ b/.github/workflows/release-to-pypi.yml
@@ -29,5 +29,5 @@ jobs:
             - name: Build and publish to PyPI
               run: |
                 poetry build
-                poetry publish -u __token__ -p {{secrets.PYPI_TOKEN_PYQUANTAQ}}
+                poetry publish -u __token__ -p ${{secrets.PYPI_TOKEN_PYQUANTAQ}}
                 
